tests/fixtures/invalid/extern_arity.gcl
// error: extern function called with the wrong number of arguments
import plugin "graphcal:demo" as demo {
    fn lerp<D: Dim>(a: D, b: D, t: Dimensionless) -> D;
}
node x: Dimensionless = demo.lerp(1.0, 2.0);
